Tests: Wait for fonts before completing tests (WIP)

--- a/Tests/LibWeb/Ref/expected/wpt-import/css/css-fonts/font-variant-numeric-ref.html
+++ b/Tests/LibWeb/Ref/expected/wpt-import/css/css-fonts/font-variant-numeric-ref.html
@@ -11,10 +11,13 @@
 <body>
 <div id="content"></div>
 <script type="text/javascript">
+  window.onload = (event) => {
+    console.log('expectation onload', event.target.location.href);
+  }
   document.fonts.ready.then(() => {
-    internals.finishLoading();
+    console.log('exceptation document.fonts.ready');
   })
-  internals.disableAutomaticPageFinish();
+  // internals.disableAutomaticPageFinish();
   document.getElementById("content").appendChild(createFeatureTestTable(gPropertyData, "font-variant-numeric", true, false));
 </script>
 </body>
